--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
 */.metadata
 */.metadata/*
 */.recommenders
@@ -19,3 +21,5 @@ hs_err_pid*
 */*/.classpath
 */*/.project
 */*/bin/*
+
+*.png
